--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "date-fns": "^2.28.0",
         "gray-matter": "^4.0.3",
         "next": "^13.1.2",
+        "next-pwa": "^5.6.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "remark": "^14.0.2",
