--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,12 @@
 /.pnp
 .pnp.js
 
+/package-lock.json
 # testing
 /coverage
-
+/keyfile.json*
+/public/workbox-*
+/public/sw*
 # next.js
 /.next/
 /out/
