--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
         "start": "next start -p 3200"
     },
     "dependencies": {
+        "babel-runtime": "^6.26.0",
         "date-fns": "^2.28.0",
+        "google-auth-library": "^8.7.0",
+        "googleapis": "^110.0.0",
         "gray-matter": "^4.0.3",
         "next": "^13.1.2",
         "next-pwa": "^5.6.0",
