--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "gray-matter": "^4.0.3",
         "next": "^13.1.2",
         "next-pwa": "^5.6.0",
+        "nprogress": "^0.2.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "remark": "^14.0.2",
