--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
         "start": "next start -p 3200"
     },
     "dependencies": {
+        "@mdx-js/mdx": "^2.2.1",
+        "@mdx-js/react": "^2.2.1",
         "babel-runtime": "^6.26.0",
         "date-fns": "^2.28.0",
         "google-auth-library": "^8.7.0",
