--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
         "gray-matter": "^4.0.3",
         "next": "^13.1.2",
         "next-pwa": "^5.6.0",
+        "nodemailer": "^6.9.1",
         "nprogress": "^0.2.0",
         "react": "^18.2.0",
+        "react-beautiful-dnd": "^13.1.1",
         "react-dom": "^18.2.0",
         "react-icons": "^4.7.1",
         "remark": "^14.0.2",
